; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/vmwgfx/extr_vmwgfx_scrn.c_vmw_sou_surface_clip_rect.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/vmwgfx/extr_vmwgfx_scrn.c_vmw_sou_surface_clip_rect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmw_du_update_plane = type { i32 }
%struct.drm_rect = type { i32, i32, i32, i32 }
%struct.TYPE_2__ = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vmw_du_update_plane*, i8*, %struct.drm_rect*, i32, i32)* @vmw_sou_surface_clip_rect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vmw_sou_surface_clip_rect(%struct.vmw_du_update_plane* %0, i8* %1, %struct.drm_rect* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.vmw_du_update_plane*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.drm_rect*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.TYPE_2__*, align 8
  store %struct.vmw_du_update_plane* %0, %struct.vmw_du_update_plane** %6, align 8
  store i8* %1, i8** %7, align 8
  store %struct.drm_rect* %2, %struct.drm_rect** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = bitcast i8* %12 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %13, %struct.TYPE_2__** %11, align 8
  %14 = load %struct.drm_rect*, %struct.drm_rect** %8, align 8
  %15 = getelementptr inbounds %struct.drm_rect, %struct.drm_rect* %14, i32 0, i32 3
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 3
  store i32 %16, i32* %18, align 4
  %19 = load %struct.drm_rect*, %struct.drm_rect** %8, align 8
  %20 = getelementptr inbounds %struct.drm_rect, %struct.drm_rect* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 2
  store i32 %21, i32* %23, align 4
  %24 = load %struct.drm_rect*, %struct.drm_rect** %8, align 8
  %25 = getelementptr inbounds %struct.drm_rect, %struct.drm_rect* %24, i32 0, i32 1
  %26 = load i32, i32* %25, align 4
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 1
  store i32 %26, i32* %28, align 4
  %29 = load %struct.drm_rect*, %struct.drm_rect** %8, align 8
  %30 = getelementptr inbounds %struct.drm_rect, %struct.drm_rect* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  store i32 %31, i32* %33, align 4
  ret i32 16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
